; ModuleID = '/home/carl/AnghaBench/lede/package/network/utils/owipcalc/src/extr_owipcalc.c_cidr_pop.c'
source_filename = "/home/carl/AnghaBench/lede/package/network/utils/owipcalc/src/extr_owipcalc.c_cidr_pop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cidr = type { %struct.cidr* }

@stack = common dso_local global %struct.cidr* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cidr*)* @cidr_pop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cidr_pop(%struct.cidr* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cidr*, align 8
  %4 = alloca %struct.cidr*, align 8
  store %struct.cidr* %0, %struct.cidr** %3, align 8
  %5 = load %struct.cidr*, %struct.cidr** @stack, align 8
  store %struct.cidr* %5, %struct.cidr** %4, align 8
  %6 = load %struct.cidr*, %struct.cidr** %4, align 8
  %7 = icmp ne %struct.cidr* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.cidr*, %struct.cidr** @stack, align 8
  %10 = getelementptr inbounds %struct.cidr, %struct.cidr* %9, i32 0, i32 0
  %11 = load %struct.cidr*, %struct.cidr** %10, align 8
  store %struct.cidr* %11, %struct.cidr** @stack, align 8
  %12 = load %struct.cidr*, %struct.cidr** %4, align 8
  %13 = call i32 @free(%struct.cidr* %12)
  store i32 1, i32* %2, align 4
  br label %15

14:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %8
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @free(%struct.cidr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
